# kitty-alert

./: .gitignore  .pylintrc  README.md  main.py  manage.py  pyproject.toml  requirements.txt
kittyalert/: asgi.py  email.py  models.py  scraper.py  settings.py  sms.py  urls.py  views.py  wsgi.py
kittyalert/management/commands/: scrape_shelters.py  send_notifications.py
kittyalert/migrations/: 0001_initial.py  0002_alter_shelter_slug.py  0003_rename_website_shelter_scrape_url.py  0004_alter_kitty_options_remove_kitty_image_url_and_more.py  0005_alter_kitty_age_alter_kitty_weight.py  0006_alter_adopter_kitties_alter_shelter_kitties_and_more.py  0007_remove_scraperun_error_remove_scraperun_kitties_new_and_more.py  0008_kitty_link.py  0009_alter_kitty_link.py  0010_kitty_location.py  0011_adopter_phone_number.py  0012_remove_adopter_phone_number_adopter_email.py  0013_notification.py
templates/: base.html
templates/adopters/: dashboard.html  detail.html  list.html
templates/kitties/: list.html
templates/registration/: login.html
templates/shelters/: list.html
